--- a/Pipfile
+++ b/Pipfile
@@ -9,11 +9,9 @@ pandas = "*"
 matplotlib = "*"
 seaborn = "*"
 scikit-learn = "*"
-ipykernel = "*"
-featuretools = "*"
-graphviz = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.11"
+python_full_version = "3.11.4"
